--- a/debug.htm
+++ b/debug.htm
@@ -24,7 +24,7 @@
     <style>
         body {
             margin:0;
-            background: #000;
+            /*background: #000;*/
         }
         @font-face {
             font-family: 'ArcadeR';
@@ -39,14 +39,77 @@
         }
     </style>
 
-n<script src="src/inherit.js"></script>n<script src="src/sound.js"></script>n<script src="src/random.js"></script>n<script src="src/game.js"></script>n<script src="src/direction.js"></script>n<script src="src/Map.js"></script>n<script src="src/colors.js"></script>n<script src="src/mapgen.js"></script>n<script src="src/atlas.js"></script>n<script src="src/renderers.js"></script>n<script src="src/hud.js"></script>n<script src="src/galagaStars.js"></script>n<script src="src/Button.js"></script>n<script src="src/Menu.js"></script>n<script src="src/inGameMenu.js"></script>n<script src="src/sprites.js"></script>n<script src="src/Actor.js"></script>n<script src="src/Ghost.js"></script>n<script src="src/Player.js"></script>n<script src="src/actors.js"></script>n<script src="src/targets.js"></script>n<script src="src/ghostCommander.js"></script>n<script src="src/ghostReleaser.js"></script>n<script src="src/elroyTimer.js"></script>n<script src="src/energizer.js"></script>n<script src="src/fruit.js"></script>n<script src="src/executive.js"></script>n<script src="src/states.js"></script>n<script src="src/input.js"></script>n<script src="src/cutscenes.js"></script>n<script src="src/maps.js"></script>n<script src="src/vcr.js"></script>n<script src="src/main.js"></script>n
+<script src="src/inherit.js"></script>
+<script src="src/sound.js"></script>
+<script src="src/random.js"></script>
+<script src="src/game.js"></script>
+<script src="src/direction.js"></script>
+<script src="src/Map.js"></script>
+<script src="src/colors.js"></script>
+<script src="src/mapgen.js"></script>
+<script src="src/atlas.js"></script>
+<script src="src/renderers.js"></script>
+<script src="src/hud.js"></script>
+<script src="src/galagaStars.js"></script>
+<script src="src/Button.js"></script>
+<script src="src/Menu.js"></script>
+<script src="src/inGameMenu.js"></script>
+<script src="src/sprites.js"></script>
+<script src="src/Actor.js"></script>
+<script src="src/Ghost.js"></script>
+<script src="src/Player.js"></script>
+<script src="src/actors.js"></script>
+<script src="src/targets.js"></script>
+<script src="src/ghostCommander.js"></script>
+<script src="src/ghostReleaser.js"></script>
+<script src="src/elroyTimer.js"></script>
+<script src="src/energizer.js"></script>
+<script src="src/fruit.js"></script>
+<script src="src/executive.js"></script>
+<script src="src/states.js"></script>
+<script src="src/input.js"></script>
+<script src="src/cutscenes.js"></script>
+<script src="src/maps.js"></script>
+<script src="src/vcr.js"></script>
+<script src="src/main.js"></script>
+
+<script src="src/custom.js"></script>
+
 
 </head>
 
 <body>
     <div style='font-family: ArcadeR'> </div>
-    <canvas id='canvas'><div id="canvas-warning">Your browser does not support HTML Canvas.  Please upgrade!</div></canvas>
-    <canvas id='atlas' style="display:none"></canvas>
+    <!-- <canvas id='canvas' style="float: left"> -->
+    <div id='custom0' style="display:inline-block;">
+        <canvas id='canvas' style="float:left">
+            <div id="canvas-warning">Your browser does not support HTML Canvas. Please upgrade!</div>
+        </canvas>
+
+    </div>
+
+    <div id='custom' style="border-style:solid">
+
+        <p>
+        ennemy: <input type='number' size='4' id='numberinput' name='mynumber' value='4' />
+        </p>
+
+        <p>
+        touches: <input id='touches' type='number' size='2' value='0' />
+        </p>
+
+        <p>audio
+            <label class="switch" id="audiobutton">
+            <input type="checkbox">
+            <span class="slider"></span>
+            </label>
+        </p>
+
+        <canvas id='controller'></canvas>
+
+    </div>
+
+    <canvas id='atlas' style="display:true"></canvas>
 </body>
 
 </html>
